--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,6 +24,11 @@
   weight = 40
 
 [[main]]
+  name = "Publications"
+  url = "#publications"
+  weight = 50
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 60
